[gd_scene load_steps=13 format=3 uid="uid://bkj5hm52km0yv"]

[ext_resource type="TileSet" uid="uid://dnft612t4ywn" path="res://assets/texture/tileset.tres" id="1_07y41"]
[ext_resource type="Script" path="res://scripts/Room3.gd" id="2_ewgay"]
[ext_resource type="PackedScene" uid="uid://x2qmdv6guov7" path="res://scene/scenes/Doors2.tscn" id="2_x05pb"]
[ext_resource type="PackedScene" uid="uid://bgvw47b1yapm2" path="res://scene/scenes/Doors.tscn" id="3_x3vya"]
[ext_resource type="PackedScene" uid="uid://b0bhxd54f27c4" path="res://scene/characters/guard.tscn" id="5_0bcss"]
[ext_resource type="Texture2D" uid="uid://be7kpcdn1p041" path="res://assets/texture/75071a755e87ee7d935877ee14cbc7f.png" id="6_ohfxy"]
[ext_resource type="Texture2D" uid="uid://dj4a4ed2pvhha" path="res://assets/texture/fd561f645e423a283033cf37499807a.png" id="7_3oor2"]
[ext_resource type="Script" path="res://scene/scenes/hole.gd" id="8_obabl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_icp7y"]
size = Vector2(382, 60)

[sub_resource type="Curve2D" id="Curve2D_j87x8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -49, -16, 0, 0, 0, 0, -115, -18, 0, 0, 0, 0, -110, 48, 0, 0, 0, 0, 112, 47, 0, 0, 0, 0, 110, -17, 0, 0, 0, 0, -49, -16)
}
point_count = 6

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5bfd"]
size = Vector2(32, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_vnmoy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ohfxy")
}],
"loop": true,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_3oor2")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[node name="Room3" type="TileMap"]
tile_set = ExtResource("1_07y41")
format = 2
layer_0/tile_data = PackedInt32Array(-2, 8, 0, -1, 8, 0, 65535, 8, 0, 0, 8, 0, 65536, 8, 0, 131071, 8, 0, -65538, 22, 0, -131074, 22, 0, -196610, 8, 0, -65537, 22, 0, 65534, 8, 0, -65536, 8, 0, -65535, 8, 0, -65534, 8, 0, -65533, 2, 0, 3, 8, 0, 65538, 8, 0, 65537, 8, 0, 131072, 8, 0, 196607, 8, 0, -131072, 22, 0, -196608, 22, 0, -327684, 8, 0, -262148, 8, 0, -196612, 8, 0, -131076, 22, 0, -65540, 22, 0, -4, 8, 0, 65532, 8, 0, 131068, 2, 0, 196604, 8, 0, 262140, 8, 0, 327676, 8, 0, -327683, 8, 0, -262147, 8, 0, -196611, 8, 0, -131075, 22, 0, -65539, 22, 0, -3, 8, 0, 65533, 8, 0, 131069, 8, 0, 196605, 8, 0, 262141, 8, 0, 327677, 8, 0, -327682, 8, 0, -262146, 12, 0, 131070, 8, 0, 196606, 8, 0, 262142, 8, 0, 327678, 8, 0, -327681, 8, 0, -262145, 12, 0, -196609, 8, 0, -131073, 22, 0, 262143, 8, 0, 327679, 8, 0, -393216, 8, 0, -327680, 12, 0, -262144, 8, 0, 196608, 8, 0, 262144, 8, 0, -393215, 8, 0, -327679, 12, 0, -262143, 8, 0, -196607, 22, 0, -131071, 22, 0, 1, 8, 0, 131073, 8, 0, 196609, 8, 0, 262145, 8, 0, -393214, 8, 0, -327678, 8, 0, -262142, 8, 0, -196606, 22, 0, -131070, 22, 0, 2, 8, 0, 131074, 8, 0, 196610, 8, 0, 262146, 8, 0, -393213, 8, 0, -327677, 8, 0, -262141, 8, 0, -196605, 22, 0, -131069, 22, 0, 65539, 8, 0, 131075, 8, 0, 196611, 8, 0, 262147, 8, 0, -393212, 8, 0, -327676, 8, 0, -262140, 8, 0, -196604, 22, 0, -131068, 22, 0, 4, 8, 0, 65540, 8, 0, 131076, 8, 0, 196612, 8, 0, 262148, 8, 0, -327685, 8, 0, -262149, 8, 0, -196613, 8, 0, -131077, 22, 0, -65541, 22, 0, -5, 8, 0, 65531, 8, 0, 131067, 8, 0, 196603, 8, 0, 262139, 8, 0, 327675, 8, 0, 393211, 8, 0, 393212, 8, 0, 393213, 8, 0, 393214, 8, 0, 393215, 8, 0, 327680, 8, 0, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, -393211, 8, 0, -327675, 8, 0, -262139, 8, 0, -196603, 22, 0, -131067, 22, 0, -65531, 8, 0, 5, 8, 0, 65541, 8, 0, 131077, 8, 0, 196613, 8, 0, 262149, 8, 0, 327685, 8, 0, -327686, 8, 0, -262150, 8, 0, -196614, 8, 0, -131078, 22, 0, -65542, 22, 0, -6, 8, 0, 65530, 8, 0, 131066, 8, 0, 196602, 8, 0, 262138, 8, 0, 327674, 8, 0, 393210, 8, 0, -327687, 13, 0, -393222, 12, 0, -393221, 12, 0, -393220, 12, 0, -393219, 12, 0, -393218, 12, 0, -393217, 18, 0, -458752, 19, 0, -458751, 12, 0, -458750, 12, 0, -458749, 12, 0, -458748, 12, 0, -458747, 12, 0, 458746, 12, 0, 458747, 12, 0, 458748, 12, 0, 458749, 12, 0, 458750, 12, 0, 458751, 12, 0, 393216, 12, 0, 393217, 12, 0, 393218, 12, 0, 393219, 12, 0, 393220, 12, 0, 393221, 12, 0, -262151, 13, 0, -196615, 13, 0, -131079, 13, 0, -65543, 13, 0, -7, 13, 0, 65529, 13, 0, 131065, 13, 0, 196601, 13, 0, 262137, 13, 0, 327673, 13, 0, 393209, 13, 0, -393210, 14, 0, -327674, 14, 0, -262138, 14, 0, -196602, 14, 0, -131066, 14, 0, -65530, 14, 0, 6, 14, 0, 65542, 14, 0, 131078, 14, 0, 196614, 14, 0, 262150, 14, 0, 327686, 14, 0, 458745, 17, 0, -393223, 17, 0, 393222, 15, 0, -458746, 15, 0, -65532, 8, 0)
layer_1/tile_data = PackedInt32Array(-131079, 20, 1610612736, 458749, 20, 0, 458751, 18, 0, 393216, 19, 0)
script = ExtResource("2_ewgay")

[node name="Node2D" parent="." instance=ExtResource("2_x05pb")]
position = Vector2(-186, -78)
who = "bird"
to_room = "Room5"
positions = Vector2(180, -80)
keyid = 1
reduce = 0

[node name="Node2D2" parent="." instance=ExtResource("3_x3vya")]
position = Vector2(0, 185)
to_room = "Room12"
positions = Vector2(0, -176)
needkeyid = 4
reduce = 0

[node name="Node2D3" parent="." instance=ExtResource("3_x3vya")]
position = Vector2(-81, 185)
who = "bird"
to_room = "Room12"
positions = Vector2(-50, -176)
reduce = 0

[node name="Node2D4" parent="." instance=ExtResource("3_x3vya")]
position = Vector2(0, -182)
to_room = "Room2"
positions = Vector2(0, 250)
reduce = 0

[node name="Area2D" type="Area2D" parent="."]

[node name="ci" type="TileMap" parent="Area2D"]
tile_set = ExtResource("1_07y41")
format = 2
layer_0/tile_data = PackedInt32Array(-131078, 21, 0, -131077, 21, 0, -131076, 21, 0, -131075, 21, 0, -131074, 21, 0, -131073, 21, 0, -196608, 21, 0, -196607, 21, 0, -196606, 21, 0, -196605, 21, 0, -196604, 21, 0, -196603, 21, 0, -131067, 21, 0, -131068, 21, 0, -131069, 21, 0, -131070, 21, 0, -131071, 21, 0, -131072, 21, 0, -65537, 21, 0, -65538, 21, 0, -65539, 21, 0, -65540, 21, 0, -65541, 21, 0, -65542, 21, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_icp7y")
disabled = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_j87x8")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-49, -16)
rotation = -3.1113

[node name="guard" parent="Path2D/PathFollow2D" instance=ExtResource("5_0bcss")]
position = Vector2(-0.999542, 0.0302896)
rotation = 3.1113
speed = 100

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(112, -15.5)
shape = SubResource("RectangleShape2D_l5bfd")

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(-112, 48)
shape = SubResource("RectangleShape2D_l5bfd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(200.56, -15.2642)
rotation = 1.5708
scale = Vector2(1.04599, 0.486792)
sprite_frames = SubResource("SpriteFrames_vnmoy")
animation = &"close"

[node name="Node2D5" parent="." instance=ExtResource("2_x05pb")]
position = Vector2(188, -15)
to_room = "Room4"
positions = Vector2(-180, -15)
needkeyid = 10
warmtext = "墙有个破洞，你可能需要个铲子"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(144, 208)
sprite_frames = SubResource("SpriteFrames_vnmoy")
animation = &"close"
script = ExtResource("8_obabl")

[node name="Node2D6" parent="." instance=ExtResource("3_x3vya")]
position = Vector2(145, 185)
to_room = "Room7"
positions = Vector2(-173, -173)
needkeyid = 10
warmtext = "墙有个破洞，你可能需要个铲子"

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_entered" from="Area2D2" to="." method="_on_area_2d_2_body_shape_entered"]
[connection signal="body_shape_entered" from="Area2D3" to="." method="_on_area_2d_3_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
